fixed jonmars attempt at gradient dark mode

--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -93,25 +93,21 @@ button {
   height: 345px;
 }
 
-// .gradient {
-//   background: linear-gradient(
-//     181deg,
-//     rgba(251, 251, 251, 0) 50%,
-//     $primary-dark 76%
-//   );
-//   width: 100vw;
-//   height: 30vw;
-//   transform: translateY(-93%);
-//   pointer-events: none;
-// }
+.gradient {
+  background: linear-gradient(181deg, rgba(251, 251, 251, 0) 50%, $white 76%);
+  width: 100vw;
+  height: 200px;
+  transform: translateY(-100%);
+  pointer-events: none;
 
-// .gradient {
-//   background: linear-gradient(181deg, rgba(251, 251, 251, 0) 50%, $white 76%);
-//   width: 100vw;
-//   height: 30vw;
-//   transform: translateY(-93%);
-//   pointer-events: none;
-// }
+  &.light-mode {
+    background: linear-gradient(181deg, rgba(251, 251, 251, 0) 50%, $primary-dark 76%);
+  }
+
+  &.dark-mode {
+    background: linear-gradient(181deg, rgba(251, 251, 251, 0) 50%, $white 76%);
+  }
+}
 
 .hero-content,
 .data-live {
